remove gradle config for  preview features